--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,24 @@
     android:padding="@dimen/common_spacing"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/viewCount"
+        android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintRight_toRightOf="@id/content"
+        app:layout_constraintBottom_toBottomOf="@id/view"
+        android:layout_width="@dimen/ic_base_size"
+        android:layout_height="@dimen/ic_base_size"
+        android:text="500" />
+
+    <TextView
+        android:layout_marginTop="@dimen/common_spacing"
+        android:id="@+id/shareCount"
+        android:layout_width="@dimen/ic_base_size"
+        android:layout_height="@dimen/ic_base_size"
+        app:layout_constraintStart_toEndOf="@id/share"
+        app:layout_constraintBottom_toBottomOf="@id/share"
+        android:text="5" />
+
     <ImageView
         android:id="@+id/avatar"
         android:layout_width="@dimen/posts_avatar_size"
@@ -62,8 +80,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="avatar,published,menu"
-        />
+        app:constraint_referenced_ids="avatar,published,menu" />
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/iconBarrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="like,view,share" />
 
     <TextView
         android:id="@+id/content"
@@ -75,5 +98,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier"
         tools:text="@sample/posts.json/data/content" />
+
+    <ImageView
+        android:id="@+id/share"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:layout_width="@dimen/ic_base_size"
+        android:layout_height="@dimen/ic_base_size"
+        app:srcCompat="@android:drawable/ic_menu_share"
+        app:layout_constraintTop_toBottomOf="@id/content"
+        app:layout_constraintLeft_toRightOf="@id/likeCount" />
+
+    <ImageView
+        android:id="@+id/view"
+        android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintTop_toBottomOf="@id/content"
+        app:layout_constraintRight_toLeftOf="@id/viewCount"
+        android:layout_width="@dimen/ic_base_size"
+        android:layout_height="@dimen/ic_base_size"
+        app:srcCompat="@android:drawable/ic_menu_view" />
+
+    <ImageView
+        android:id="@+id/like"
+        android:layout_width="@dimen/ic_base_size"
+        android:layout_height="@dimen/ic_base_size"
+        app:srcCompat="@android:drawable/btn_star"
+        android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintTop_toBottomOf="@id/content"
+        app:layout_constraintStart_toLeftOf="@id/content" />
+
+    <TextView
+        android:id="@+id/likeCount"
+        android:layout_width="@dimen/ic_base_size"
+        android:layout_height="@dimen/ic_base_size"
+        app:layout_constraintLeft_toRightOf="@id/like"
+        app:layout_constraintBottom_toBottomOf="@id/like"
+        android:text="10"
+ />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
