--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/common_spacing"
@@ -9,21 +10,21 @@
 
     <TextView
         android:id="@+id/viewCount"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintRight_toRightOf="@id/content"
-        app:layout_constraintBottom_toBottomOf="@id/view"
         android:layout_width="@dimen/ic_base_size"
         android:layout_height="@dimen/ic_base_size"
-        android:text="500" />
+        android:layout_marginTop="@dimen/common_spacing"
+        android:text="500"
+        app:layout_constraintBottom_toBottomOf="@id/view"
+        app:layout_constraintRight_toRightOf="@id/content" />
 
     <TextView
-        android:layout_marginTop="@dimen/common_spacing"
         android:id="@+id/shareCount"
         android:layout_width="@dimen/ic_base_size"
         android:layout_height="@dimen/ic_base_size"
-        app:layout_constraintStart_toEndOf="@id/share"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:text="5"
         app:layout_constraintBottom_toBottomOf="@id/share"
-        android:text="5" />
+        app:layout_constraintStart_toEndOf="@id/share" />
 
     <ImageView
         android:id="@+id/avatar"
@@ -31,9 +32,9 @@
         android:layout_height="@dimen/posts_avatar_size"
         android:layout_marginBottom="@dimen/common_spacing"
         android:contentDescription="@string/description_post_author_avatar"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/barrier"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@sample/posts.json/data/authorAvatar" />
 
     <TextView
@@ -44,10 +45,10 @@
         android:layout_marginEnd="@dimen/common_spacing"
         android:ellipsize="end"
         android:singleLine="true"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/published"
         app:layout_constraintEnd_toStartOf="@id/menu"
         app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         tools:text="@sample/posts.json/data/author" />
 
@@ -58,10 +59,10 @@
         android:layout_marginStart="@dimen/common_spacing"
         android:layout_marginEnd="@dimen/common_spacing"
         android:layout_marginBottom="@dimen/common_spacing"
-        app:layout_constraintTop_toBottomOf="@id/author"
         app:layout_constraintBottom_toBottomOf="@id/barrier"
         app:layout_constraintEnd_toStartOf="@id/menu"
         app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintTop_toBottomOf="@id/author"
         tools:text="@sample/posts.json/data/published" />
 
     <ImageButton
@@ -81,6 +82,7 @@
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="avatar,published,menu" />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/iconBarrier"
         android:layout_width="wrap_content"
@@ -101,38 +103,36 @@
 
     <ImageView
         android:id="@+id/share"
-        android:layout_marginTop="@dimen/common_spacing"
         android:layout_width="@dimen/ic_base_size"
         android:layout_height="@dimen/ic_base_size"
-        app:srcCompat="@android:drawable/ic_menu_share"
+        android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintLeft_toRightOf="@id/likeCount"
         app:layout_constraintTop_toBottomOf="@id/content"
-        app:layout_constraintLeft_toRightOf="@id/likeCount" />
+        app:srcCompat="@android:drawable/ic_menu_share" />
 
     <ImageView
         android:id="@+id/view"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintTop_toBottomOf="@id/content"
-        app:layout_constraintRight_toLeftOf="@id/viewCount"
         android:layout_width="@dimen/ic_base_size"
         android:layout_height="@dimen/ic_base_size"
+        android:layout_marginTop="@dimen/common_spacing"
+        app:layout_constraintRight_toLeftOf="@id/viewCount"
+        app:layout_constraintTop_toBottomOf="@id/content"
         app:srcCompat="@android:drawable/ic_menu_view" />
 
     <ImageView
         android:id="@+id/like"
         android:layout_width="@dimen/ic_base_size"
         android:layout_height="@dimen/ic_base_size"
-        app:srcCompat="@android:drawable/btn_star"
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintTop_toBottomOf="@id/content"
-        app:layout_constraintStart_toLeftOf="@id/content" />
+        app:srcCompat="@android:drawable/btn_star" />
 
     <TextView
         android:id="@+id/likeCount"
         android:layout_width="@dimen/ic_base_size"
         android:layout_height="@dimen/ic_base_size"
-        app:layout_constraintLeft_toRightOf="@id/like"
-        app:layout_constraintBottom_toBottomOf="@id/like"
         android:text="10"
- />
+        app:layout_constraintBottom_toBottomOf="@id/like"
+        app:layout_constraintLeft_toRightOf="@id/like" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
