--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/viewCount"
-        android:layout_width="@dimen/ic_base_size"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:layout_marginTop="@dimen/common_spacing"
         android:text="500"
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/shareCount"
-        android:layout_width="@dimen/ic_base_size"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:layout_marginTop="@dimen/common_spacing"
         android:text="5"
@@ -103,7 +103,7 @@
 
     <ImageView
         android:id="@+id/share"
-        android:layout_width="@dimen/ic_base_size"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintLeft_toRightOf="@id/likeCount"
@@ -112,7 +112,7 @@
 
     <ImageView
         android:id="@+id/view"
-        android:layout_width="@dimen/ic_base_size"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintRight_toLeftOf="@id/viewCount"
@@ -121,7 +121,7 @@
 
     <ImageView
         android:id="@+id/like"
-        android:layout_width="@dimen/ic_base_size"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintTop_toBottomOf="@id/content"
@@ -129,7 +129,7 @@
 
     <TextView
         android:id="@+id/likeCount"
-        android:layout_width="@dimen/ic_base_size"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:text="10"
         app:layout_constraintBottom_toBottomOf="@id/like"
