--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="pink">#e91e63</color>
     <color name="purple">#9c27b0</color>
     <color name="deep_purple">#673ab7</color>
+    <color name="transparent"></color>
 </resources>
