--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -119,13 +119,13 @@
         app:layout_constraintTop_toBottomOf="@id/content"
         app:srcCompat="@android:drawable/ic_menu_view" />
 
-    <ImageView
+    <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/like"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintTop_toBottomOf="@id/content"
-        app:srcCompat="@drawable/ic_like_24" />
+        android:button="@drawable/like_selector" />
 
     <TextView
         android:id="@+id/likeCount"
