--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,10 @@
     <style name="App.Widget.LikeCheckBox" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
         <item name="buttonTint">@color/color_like_selector</item>
     </style>
-    <style name="App.Widget.LikeButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
-        <item name="iconTint">@color/color_like_selector</item>
 
+    <style name="Widget.AppTheme.LikeButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="iconTint">@color/icon_button_tint</item>
+        <item name="android:minWidth">16dp</item>
+        <item name="android:minHeight">16dp</item>
     </style>
 </resources>
