--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -17,14 +17,6 @@
         app:layout_constraintBottom_toBottomOf="@id/view"
         app:layout_constraintRight_toRightOf="@id/content" />
 
-    <TextView
-        android:id="@+id/shareCount"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/ic_base_size"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:text="5"
-        app:layout_constraintBottom_toBottomOf="@id/share"
-        app:layout_constraintStart_toEndOf="@id/share" />
 
     <ImageView
         android:id="@+id/avatar"
@@ -101,14 +93,16 @@
         app:layout_constraintTop_toBottomOf="@id/barrier"
         tools:text="@sample/posts.json/data/content" />
 
-    <ImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/share"
+        style="@style/Widget.AppTheme.ShareButton"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintLeft_toRightOf="@id/likeCount"
-        app:layout_constraintTop_toBottomOf="@id/content"
-        app:srcCompat="@android:drawable/ic_menu_share" />
+        app:icon="@android:drawable/ic_menu_share"
+        app:layout_constraintStart_toEndOf="@id/like"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/content" />
 
     <ImageView
         android:id="@+id/view"
@@ -121,21 +115,14 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/like"
-        app:iconTint="@style/Widget.AppTheme.LikeButton"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:checkable="true"
+        style="@style/Widget.AppTheme.LikeButton"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/ic_base_size"
         android:layout_marginTop="@dimen/common_spacing"
+        android:checkable="true"
+        android:textColor="@color/black"
         app:icon="@drawable/like_selector"
+        app:layout_constraintEnd_toStartOf="@id/share"
         app:layout_constraintTop_toBottomOf="@id/content" />
-
-    <TextView
-        android:id="@+id/likeCount"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/ic_base_size"
-        android:text="10"
-        app:layout_constraintBottom_toBottomOf="@id/like"
-        app:layout_constraintLeft_toRightOf="@id/like" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
