--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:minWidth">16dp</item>
         <item name="android:minHeight">16dp</item>
+        <item name="android:padding">0dp</item>
     </style>
 
     <style name="Widget.AppTheme.ShareButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
@@ -17,5 +18,6 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:minWidth">16dp</item>
         <item name="android:minHeight">16dp</item>
+        <item name="android:padding">0dp</item>
     </style>
 </resources>
