--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
     </style>
 
     <style name="Widget.AppTheme.LikeButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
-        <item name="iconTint">@color/icon_button_tint</item>
+        <item name="iconTint">@color/color_like_selector</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:minWidth">16dp</item>
         <item name="android:minHeight">16dp</item>
